# temp_fi

./: .gitignore  basis_monitor.db  pyproject.toml  requirements.txt  temp_doc.md
core/: __init__.py  analytics.py  basis.py  basket.py  carry.py  ctd.py  curves.py  pricing.py  scenario.py  scenarios.py
data/: db.py  fred_client.py  ingest.py  market_data.py
test/: test_analytics.py  test_basis.py  test_basket.py  test_carry.py  test_curves.py  test_db.py  test_ingest.py  test_marekt_data.py  test_pricing.py  test_scenario.py  test_scenarios.py
